--- a/index.html
+++ b/index.html
@@ -92,119 +92,8 @@
 
         const { maxLength, sortedContours } = findTheStaves(thresh);
         const notePositions = findTheNotes(gray, src);
-
-        const copyOfSortedContours = [...sortedContours];
-        console.log(`copyOfSortedContours ${copyOfSortedContours.length}`);
-
-        //TODO: loop through stave list and find all the notes on that stave rather than looping through the notes->staves
-        //TODO: would make thing cleared as to whats happening
-        //TOOD: Put everything into clean methods
-
-        for (pos in notePositions) {
-          const noteRect = notePositions[pos];
-          console.log(`noteRect ${JSON.stringify(noteRect)}`);
-
-          for (i in copyOfSortedContours) {
-            const staveRect = copyOfSortedContours[i];
-
-            // Overlap?
-            if (
-              noteRect.y - noteRect.height / 2 < staveRect.y &&
-              noteRect.y + noteRect.height > staveRect.y
-            ) {
-              console.log(`*** overlap, splitting stave into two`);
-              console.log(`staveRect ${JSON.stringify(staveRect)}`);
-              const leftStave = {
-                x: staveRect.x,
-                y: staveRect.y,
-                width: noteRect.x - staveRect.x,
-                height: staveRect.height + 5,
-                real: true,
-              };
-              const rightStave = {
-                x: noteRect.x + noteRect.width,
-                y: staveRect.y,
-                width:
-                  staveRect.x + staveRect.width - noteRect.x - noteRect.width,
-                height: staveRect.height + 5,
-                real: true,
-              };
-
-              const index = sortedContours.findIndex(
-                (item) => item.y === staveRect.y
-              );
-              // var index = sortedContours.map(function (e) { return e.y; }).indexOf(staveRect.y);
-              console.log(`adding left ${JSON.stringify(leftStave)}`);
-              sortedContours.splice(index, 0, leftStave);
-              console.log(`adding right ${JSON.stringify(rightStave)}`);
-              sortedContours.splice(index, 0, rightStave);
-
-              //TODO: Remove original element
-              // const oldIndex = sortedContours.findIndex(item => item.y === staveRect.y && item.x === staveRect.x && item.width == staveRect.width);
-              // sortedContours.splice(oldIndex, 1)
-            }
-          }
-        }
-
-        // draw contours
-        const colours = [
-          [245, 80, 87, 255],
-          [237, 177, 231, 255],
-          [67, 74, 220, 255],
-          [165, 216, 180, 255],
-          [223, 230, 100, 255],
-          [252, 172, 60, 255],
-          [245, 80, 87, 255],
-          [213, 95, 204, 255],
-          [67, 74, 220, 255],
-          [165, 216, 180, 255],
-        ];
-
-        let colour_idx = 0;
-        let colour = colours[colour_idx];
-
-        let previousStaveY = 0;
-        for (i in sortedContours) {
-          const rect = sortedContours[i];
-          console.log(`=> stave x ${rect.x} y ${rect.y} real ${rect.real}`);
-
-          // Only draw real (manually added) horizontal lines or those which are long enough to be considered part of the stave
-          if (rect.real || rect.width > maxLength / 2) {
-            if (rect.y != previousStaveY) {
-              console.log(
-                `changing colour as stave y has changed from ${previousStaveY} to x ${rect.x} y ${rect.y} real ${rect.real}`
-              );
-
-              previousStaveY = rect.y;
-              colour_idx = colour_idx + 1;
-              if (colour_idx == colours.length) {
-                colour_idx = 0;
-              }
-              colour = colours[colour_idx];
-            } else {
-              console.log(`keeping colour`);
-            }
-
-            if (rect.real) {
-              cv.rectangle(
-                src,
-                new cv.Point(rect.x, rect.y),
-                new cv.Point(rect.x + rect.width, rect.y + rect.height),
-                colour,
-                -1
-              );
-            } else {
-              cv.rectangle(
-                src,
-                new cv.Point(rect.x, rect.y),
-                new cv.Point(rect.x + rect.width, rect.y + rect.height),
-                colour,
-                1
-              );
-            }
-          }
-        }
-
+        cutoutNotesFromStaves(sortedContours, notePositions);
+        drawStaves(sortedContours, src, maxLength);
         cv.imshow("canvasOutput", src);
 
         src.delete();
@@ -334,6 +223,120 @@
           );
         }
         return notePositions;
+      }
+      function cutoutNotesFromStaves(sortedContours, notePositions) {
+        const copyOfSortedContours = [...sortedContours];
+        console.log(`copyOfSortedContours ${copyOfSortedContours.length}`);
+
+        //TODO: loop through stave list and find all the notes on that stave rather than looping through the notes->staves
+        //TODO: would make thing cleared as to whats happening
+        //TOOD: Put everything into clean methods
+
+        for (pos in notePositions) {
+          const noteRect = notePositions[pos];
+          console.log(`noteRect ${JSON.stringify(noteRect)}`);
+
+          for (i in copyOfSortedContours) {
+            const staveRect = copyOfSortedContours[i];
+
+            // Overlap?
+            if (
+              noteRect.y - noteRect.height / 2 < staveRect.y &&
+              noteRect.y + noteRect.height > staveRect.y
+            ) {
+              console.log(`*** overlap, splitting stave into two`);
+              console.log(`staveRect ${JSON.stringify(staveRect)}`);
+              const leftStave = {
+                x: staveRect.x,
+                y: staveRect.y,
+                width: noteRect.x - staveRect.x,
+                height: staveRect.height + 5,
+                real: true,
+              };
+              const rightStave = {
+                x: noteRect.x + noteRect.width,
+                y: staveRect.y,
+                width:
+                  staveRect.x + staveRect.width - noteRect.x - noteRect.width,
+                height: staveRect.height + 5,
+                real: true,
+              };
+
+              const index = sortedContours.findIndex(
+                (item) => item.y === staveRect.y
+              );
+              // var index = sortedContours.map(function (e) { return e.y; }).indexOf(staveRect.y);
+              console.log(`adding left ${JSON.stringify(leftStave)}`);
+              sortedContours.splice(index, 0, leftStave);
+              console.log(`adding right ${JSON.stringify(rightStave)}`);
+              sortedContours.splice(index, 0, rightStave);
+
+              //TODO: Remove original element
+              // const oldIndex = sortedContours.findIndex(item => item.y === staveRect.y && item.x === staveRect.x && item.width == staveRect.width);
+              // sortedContours.splice(oldIndex, 1)
+            }
+          }
+        }
+      }
+      function drawStaves(sortedContours, src, maxLength) {
+        // draw contours
+        const colours = [
+          [245, 80, 87, 255],
+          [237, 177, 231, 255],
+          [67, 74, 220, 255],
+          [165, 216, 180, 255],
+          [223, 230, 100, 255],
+          [252, 172, 60, 255],
+          [245, 80, 87, 255],
+          [213, 95, 204, 255],
+          [67, 74, 220, 255],
+          [165, 216, 180, 255],
+        ];
+
+        let colour_idx = 0;
+        let colour = colours[colour_idx];
+
+        let previousStaveY = 0;
+        for (i in sortedContours) {
+          const rect = sortedContours[i];
+          console.log(`=> stave x ${rect.x} y ${rect.y} real ${rect.real}`);
+
+          // Only draw real (manually added) horizontal lines or those which are long enough to be considered part of the stave
+          if (rect.real || rect.width > maxLength / 2) {
+            if (rect.y != previousStaveY) {
+              console.log(
+                `changing colour as stave y has changed from ${previousStaveY} to x ${rect.x} y ${rect.y} real ${rect.real}`
+              );
+
+              previousStaveY = rect.y;
+              colour_idx = colour_idx + 1;
+              if (colour_idx == colours.length) {
+                colour_idx = 0;
+              }
+              colour = colours[colour_idx];
+            } else {
+              console.log(`keeping colour`);
+            }
+
+            if (rect.real) {
+              cv.rectangle(
+                src,
+                new cv.Point(rect.x, rect.y),
+                new cv.Point(rect.x + rect.width, rect.y + rect.height),
+                colour,
+                -1
+              );
+            } else {
+              cv.rectangle(
+                src,
+                new cv.Point(rect.x, rect.y),
+                new cv.Point(rect.x + rect.width, rect.y + rect.height),
+                colour,
+                1
+              );
+            }
+          }
+        }
       }
     </script>
     <script
