--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
 
         const { maxLength, sortedContours } = findTheStaves(thresh);
         const notePositions = findTheNotes(gray, src);
-        cutoutNotesFromStaves(sortedContours, notePositions);
-        drawStaves(sortedContours, src, maxLength);
+        const newContours = cutoutNotesFromStaves(
+          sortedContours,
+          notePositions,
+          src
+        );
+        drawStaves(newContours, src, maxLength);
         cv.imshow("canvasOutput", src);
 
         // Clean up
@@ -170,8 +174,7 @@
 
         let maxVal = null;
         let minVal = null;
-        while (counter < 10) {
-          //1000) {
+        while (counter < 1000) {
           counter = counter + 1;
 
           const minMax = cv.minMaxLoc(matched);
@@ -219,35 +222,74 @@
             0
           );
         }
-        return notePositions;
+
+        //Sort 'em
+        sortedNotePositions = notePositions.sort((item1, item2) => {
+          return item1.y < item2.y ? -1 : item1.y > item2.y ? 1 : 0;
+        });
+
+        return sortedNotePositions;
       }
-      function cutoutNotesFromStaves(sortedContours, notePositions) {
+      function cutoutNotesFromStaves(sortedContours, notePositions, src) {
         const copyOfSortedContours = [...sortedContours];
+        let outputContours = [];
         console.log(`copyOfSortedContours ${copyOfSortedContours.length}`);
 
         //TODO: loop through stave list and find all the notes on that stave rather than looping through the notes->staves
         //TODO: would make thing cleared as to whats happening
         //TOOD: Put everything into clean methods
 
-        for (pos in notePositions) {
-          const noteRect = notePositions[pos];
-          console.log(`noteRect ${JSON.stringify(noteRect)}`);
+        let counter = 0;
+        for (i in copyOfSortedContours) {
+          const staveRect = copyOfSortedContours[i];
+          console.log(
+            `NFS [${counter}] staveRect ${JSON.stringify(staveRect)}`
+          );
 
-          for (i in copyOfSortedContours) {
-            const staveRect = copyOfSortedContours[i];
+          counter = counter + 1;
+          if (counter > 5) {
+            console.log(`reached counter limit so exiting`);
+            break;
+          }
+
+          // cv.rectangle(
+          //   src,
+          //   new cv.Point(staveRect.x - 10, staveRect.y - 10),
+          //   new cv.Point(
+          //     staveRect.x + staveRect.width + 20,
+          //     staveRect.y + staveRect.height + 20
+          //   ),
+          //   new cv.Scalar(0, 0, 255, 255),
+          //   1,
+          //   cv.LINE_8,
+          //   0
+          // );
+
+          let wasNotOverlap = false;
+          for (pos in notePositions) {
+            const noteRect = notePositions[pos];
+            console.log(`NFS   noteRect ${JSON.stringify(noteRect)}`);
+
+            if (noteRect.y > staveRect.y) {
+              console.log(
+                `NFS   note is below this stave, moving to next stave`
+              );
+              break;
+            }
 
             // Overlap?
             if (
               noteRect.y - noteRect.height / 2 < staveRect.y &&
               noteRect.y + noteRect.height > staveRect.y
             ) {
-              console.log(`*** overlap, splitting stave into two`);
-              console.log(`staveRect ${JSON.stringify(staveRect)}`);
+              wasNotOverlap = true;
+              console.log(`NFS   *** overlap, splitting stave into two`);
+              const EXTRA_HEIGHT = 2;
               const leftStave = {
                 x: staveRect.x,
                 y: staveRect.y,
                 width: noteRect.x - staveRect.x,
-                height: staveRect.height + 5,
+                height: staveRect.height + EXTRA_HEIGHT,
                 real: true,
               };
               const rightStave = {
@@ -255,26 +297,28 @@
                 y: staveRect.y,
                 width:
                   staveRect.x + staveRect.width - noteRect.x - noteRect.width,
-                height: staveRect.height + 5,
+                height: staveRect.height + EXTRA_HEIGHT,
                 real: true,
               };
 
               const index = sortedContours.findIndex(
                 (item) => item.y === staveRect.y
               );
-              // var index = sortedContours.map(function (e) { return e.y; }).indexOf(staveRect.y);
-              console.log(`adding left ${JSON.stringify(leftStave)}`);
-              sortedContours.splice(index, 0, leftStave);
-              console.log(`adding right ${JSON.stringify(rightStave)}`);
-              sortedContours.splice(index, 0, rightStave);
-
-              //TODO: Remove original element
-              // const oldIndex = sortedContours.findIndex(item => item.y === staveRect.y && item.x === staveRect.x && item.width == staveRect.width);
-              // sortedContours.splice(oldIndex, 1)
+              console.log(`NFS   adding left ${JSON.stringify(leftStave)}`);
+              outputContours.push(leftStave);
+              console.log(`NFS   adding right ${JSON.stringify(rightStave)}`);
+              outputContours.push(rightStave);
             }
           }
+          if (!wasNotOverlap) {
+            // put original stave back
+            console.log(`NFS  keeping original stave`);
+            outputContours.push(staveRect);
+          }
         }
+        return outputContours;
       }
+
       function drawStaves(sortedContours, src, maxLength) {
         // draw contours
         const colours = [
@@ -320,7 +364,21 @@
                 src,
                 new cv.Point(rect.x, rect.y),
                 new cv.Point(rect.x + rect.width, rect.y + rect.height),
-                colour,
+                new cv.Scalar(100, 0, 255, 255), //colour,
+                -1
+              );
+              cv.rectangle(
+                src,
+                new cv.Point(rect.x, rect.y - 10),
+                new cv.Point(rect.x, rect.y + rect.height + 20),
+                new cv.Scalar(0, 255, 0, 255), //colour,
+                -1
+              );
+              cv.rectangle(
+                src,
+                new cv.Point(rect.x + rect.width, rect.y - 10),
+                new cv.Point(rect.x + rect.width, rect.y + rect.height + 20),
+                new cv.Scalar(0, 0, 0, 255), //colour,
                 -1
               );
             } else {
